fix issue on mobile

--- a/styles/orangeenvelopestyles.css
+++ b/styles/orangeenvelopestyles.css
@@ -11,7 +11,7 @@ body {
 
 @media (min-width: 320px) and (max-width: 1023px) {
     body {
-        transform: scale(1);
+        transform: scale(0.5);
         display: flex;
         justify-content: center;
         /* Centers the element horizontally */
